	* Release 1.2.5
	* Changed
		- The shortcut for starting/pausing transport can now be used spin boxed
			(like the BPM one) too (#2098).
		- Combo boxes do not accept focus (and preventing shortcuts) anymore.
		- LASH support has been deprecated and will be removed in version 2.0 of
      Hydrogen (#1649).
		- Allow to select and copy version in About dialog (#2127).
	* Fixed
		- Fix compilation with LASH support enabled (#2076).
		- Fix Hue slider in Preferences > Appearance > Color (#2081)
		- Show the Crash Reporter and exit with return code `1` on unhandled
			exceptions.
		- Fix crashes in SampleEditor (#2092).
		- Fix track names in multi track export. When using just the file extension,
			the raw instrument names will be used (#2096).
		- Fix import bug for drumkits created in version >= 2.0.
		- Fix memory leakage for songs created in version >= 2.0.
		- Fix memory leakage for notes with probability < 1.0.
		- Fix incoming MIDI NOTE OFF handling.
		- AppImage build dir is now removed on `build.sh r` (#2129).

2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
	* Release 1.2.4
	* Added
		- MIDI and OSC commands
				- `CLEAR_SELECTED_INSTRUMENT` - to remove all notes of the selected
				  pattern associated with the currently selected instrument.
				- `CLEAR_PATTERN` - to remove all notes of the selected pattern.
				- `INSTRUMENT_PITCH` - to adjust the pitch of an instrument.
		- OSC commands
				- `NOTE_ON` and `NOTE_OFF` which are handled like incoming MIDI events
				  without triggering their associated actions.
				- `CLEAR_INSTRUMENT` - to remove all notes of the selected pattern
 				  associated with the provided instrument number.
		- CLI option:
			- `-O`/`--osc-port` to use a custom OSC port in both `hydrogen`
			  and `h2cli`.
			- `-L`/`--log-file` to provide a path to an alternative log file.
			- `-T`/`--log-timestamps` to add timestamps to all log messages.
			- `--config` to use a different user-level config file.